--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,8 +372,8 @@
     <!-- Divider Popup Text -->
     <string name="divider_button_positive" tools:ignore="MissingTranslation">@string/validate</string>
     <string name="divider_button_negative" tools:ignore="MissingTranslation">@string/cancel</string>
-    <string name="loading_processing">Processing...</string>
-    <string name="loading_please_wait">Please wait...</string>
+    <string name="loading_processing">Processing…</string>
+    <string name="loading_please_wait">Please wait…</string>
 
     <!-- Swipe Gestures -->
     <string name="swipe_to_delete">Swipe left to delete</string>
@@ -403,13 +403,11 @@
     <string name="success_data_synced">Data synchronized with server</string>
 
     <!-- Progress Messages -->
-    <string name="progress_action_running">%1$s in progress...</string>
-    <string name="progress_processing_payment">Processing payment...</string>
-    <string name="progress_printing_receipt">Printing receipt...</string>
-    <string name="progress_syncing_data">Synchronizing data...</string>
-    <string name="progress_connecting_device">Connecting to device...</string>
-    <!-- Biometric Authentication -->
-    <string name="biometric_setup_title">Biometric Security Setup</string>
+    <string name="progress_action_running">%1$s in progress…</string>
+    <string name="progress_processing_payment">Processing payment…</string>
+    <string name="progress_printing_receipt">Printing receipt…</string>
+    <string name="progress_syncing_data">Synchronizing data…</string>
+    <string name="progress_connecting_device">Connecting to device…</string>
 
     <!-- Theme and Accessibility -->
     <string name="dark_mode">Dark Mode</string>
@@ -431,4 +429,59 @@
     <string name="clear_image_cache">Clear Image Cache</string>
     <string name="image_cache_cleared">Image cache cleared successfully</string>
     <string name="cache_size">Cache Size: %s</string>
+
+    <!-- Biometric Authentication -->
+<!--    <string name="biometric_setup_title">Biometric Security Setup</string>-->
+
+    <string name="biometric_setup_title">Biometric Authentication</string>
+    <string name="biometric_status_title">Current Status</string>
+    <string name="checking_biometric_status">Checking biometric availability…</string>
+    <string name="enable_biometric_auth">Enable Biometric Login</string>
+    <string name="biometric_auth_description">Use your fingerprint or face to log in faster and more securely.</string>
+    <string name="test_biometric_auth">Test Biometric</string>
+    <string name="biometric_info_text">You can change this setting anytime from preferences.</string>
+    <string name="biometric_title_manager">Manager Authentication</string>
+    <string name="biometric_subtitle_manager">Authenticate to access manager features</string>
+
+    <string name="biometric_title_sensitive">Sensitive Operation</string>
+    <string name="biometric_subtitle_sensitive">Authenticate to perform %1$s</string>
+
+    <string name="biometric_title_access">App Access</string>
+    <string name="biometric_subtitle_access">Authenticate to access the app</string>
+
+    <string name="biometric_not_enabled">Biometric authentication is not enabled</string>
+    <string name="biometric_available">Biometric authentication is available</string>
+    <string name="biometric_no_hardware">No biometric hardware available</string>
+    <string name="biometric_hw_unavailable">Biometric hardware currently unavailable</string>
+    <string name="biometric_none_enrolled">No biometric credentials enrolled</string>
+    <string name="biometric_unknown_error">Unknown biometric error</string>
+    <string name="currency_symbol">$</string> <!-- Or any symbol you use -->
+    <string name="qty_label">Qty:</string>
+    <string name="transactions_label">Transactions</string>
+    <!-- App Name -->
+    <string name="app_name">Sales Dashboard</string>
+
+    <!-- Header -->
+    <string name="sales_dashboard">Sales Dashboard</string>
+    <string name="biometric_not_available">Biometric authentication not available on this device.</string>
+    <string name="biometric_test_success">Biometric authentication succeeded!</string>
+    <string name="biometric_test_failed">Biometric authentication failed!</string>
+    <string name="biometric_error">Biometric error: %1$s</string>
+
+    <!-- Metric Labels -->
+    <string name="todays_sales">Today\'s Sales</string>
+    <string name="transactions">Transactions</string>
+    <string name="avg_transaction">Avg. Transaction</string>
+    <string name="current_hour">This Hour\'s Revenue</string>
+
+    <!-- Chart Titles -->
+    <string name="hourly_sales_chart">Hourly Sales</string>
+    <string name="top_products_chart">Top Products</string>
+    <string name="best_sellers">Best Sellers</string>
+
+    <!-- Default Values -->
+    <string name="default_currency">$0.00</string>
+    <string name="default_transaction_count">0</string>
+    <string name="progress">Progress</string>
+    <string name="top_products_list">Top Products List</string>
 </resources>
